fixed navbar on mobile

--- a/app/javascript/src/css/App.css
+++ b/app/javascript/src/css/App.css
@@ -356,3 +356,8 @@ h6 {
   margin-left: 0px !important;
   margin-right: 0px !important;
 }
+
+.mobile-footer {
+  position: fixed !important;
+  z-index: 1000 !important;
+}
